syntax = "proto3";

package podoai;
option go_package = "github.com/therehabstreet/podoai/proto/common";

import "google/protobuf/timestamp.proto";

service CommonService {
  // Authentication RPCs
  rpc RequestOtp(RequestOtpRequest) returns (RequestOtpResponse);
  rpc VerifyOtp(VerifyOtpRequest) returns (LoginResponse);

  // Scan and related RPCs
  rpc GetScans (GetScansRequest) returns (GetScansResponse);
  rpc GetScan (GetScanRequest) returns (GetScanResponse);
  rpc CreateScan (CreateScanRequest) returns (CreateScanResponse);
  rpc UpdateScan (UpdateScanRequest) returns (UpdateScanResponse);
  rpc DeleteScan (DeleteScanRequest) returns (DeleteScanResponse);
  rpc GenerateMediaSignedUrls (GenerateMediaSignedUrlsRequest) returns (GenerateMediaSignedUrlsResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc GetExercise (GetExerciseRequest) returns (GetExerciseResponse);
  rpc GetTherapy (GetTherapyRequest) returns (GetTherapyResponse);

  // Patient RPCs
  rpc GetPatients (GetPatientsRequest) returns (GetPatientsResponse);
  rpc GetPatient (GetPatientRequest) returns (GetPatientResponse);
  rpc SearchPatient (SearchPatientRequest) returns (SearchPatientResponse);
  rpc CreatePatient (CreatePatientRequest) returns (CreatePatientResponse);
  rpc DeletePatient (DeletePatientRequest) returns (DeletePatientResponse);
}

message Scan {
  string id = 1;
  string patient_id = 2;
  string owner_entity_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  repeated Image images = 6;
  repeated Video videos = 7;
  ScanAIResult scan_ai_result = 8;
  string scanned_by_id = 9;
  string reviewed_by_id = 10;
  google.protobuf.Timestamp reviewed_at = 11;
}

message ScanAIResult {
  string arch_type = 1;
  string pronation = 2;
  float balance_score = 3;
  ScanLLMResult llm_result = 4;
  ScanRecommendation recommendation = 5;
}

message ScanLLMResult {
  string summary = 1;
}

message ScanRecommendation {
  repeated Product products = 1;
  repeated Exercise exercises = 2;
  repeated Therapy therapies = 3;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string media_urls = 4;
  ProductCategory category = 5;
  repeated ProductPrice prices = 6;
}

message ProductCategory {
  string id = 1;
  string name = 2;
  string description = 3;
  string image_url = 4;
}

message ProductPrice {
  string product_id = 1;
  float price = 2;
  string currency = 3;
}

message Exercise {
  string id = 1;
  string name = 2;
  string description = 3;
  string video_url = 4;
}

message Therapy {
  string id = 1;
  string name = 2;
  string description = 3;
  string video_url = 4;
}

message Image {
  ImageType type = 1;           // Enum for type safety
  string url = 3;
  google.protobuf.Timestamp captured_at = 4;
  string signed_url = 5;        // Signed URL for secure access
  string thumbnail_url = 6;     // Thumbnail signed URL
  string gcs_path = 7;          // GCS path
  string thumbnail_path = 8;    // Thumbnail GCS path
  google.protobuf.Timestamp expires_at = 9;  // When signed URLs expire
}

message Video {
  VideoType type = 1;           // Enum for type safety
  string url = 2;
  int32 duration = 3;
  google.protobuf.Timestamp captured_at = 4;
  string signed_url = 5;        // Signed URL for secure access
  string thumbnail_url = 6;     // Video thumbnail signed URL (always .jpg)
  string gcs_path = 7;          // GCS path
  string thumbnail_path = 8;    // Thumbnail GCS path
  google.protobuf.Timestamp expires_at = 9;  // When signed URLs expire
}

enum ImageType {
  IMAGE_TYPE_UNSPECIFIED = 0;
  LEFT_FOOT_DORSAL = 1;
  LEFT_FOOT_PLANTAR = 2;
  LEFT_FOOT_MEDIAL_SIDE = 3;
  LEFT_FOOT_LATERAL_SIDE = 4;
  LEFT_FOOT_ANTERIOR = 5;
  LEFT_FOOT_POSTERIOR = 6;
  RIGHT_FOOT_DORSAL = 7;
  RIGHT_FOOT_PLANTAR = 8;
  RIGHT_FOOT_MEDIAL_SIDE = 9;
  RIGHT_FOOT_LATERAL_SIDE = 10;
  RIGHT_FOOT_ANTERIOR = 11;
  RIGHT_FOOT_POSTERIOR = 12;
}

enum VideoType {
  VIDEO_TYPE_UNSPECIFIED = 0;
  GAIT_ANTERIOR = 1;
  GAIT_POSTERIOR = 2;
  GAIT_LATERAL_LEFT = 3;
  GAIT_LATERAL_RIGHT = 4;
  GAIT_OBLIQUE = 5;
  BALANCE_STATIC = 6;
  BALANCE_DYNAMIC = 7;
  SQUAT_ASSESSMENT = 8;
  HEEL_RAISE = 9;
  TOE_WALK = 10;
  HEEL_WALK = 11;
  SINGLE_LEG_STANCE = 12;
}

enum Role {
    ROLE_UNSPECIFIED = 0;
    SUPERADMIN = 1;
    ADMIN = 2;
    CLINIC_CHAIN_ADMIN = 3;
    CLINIC_ADMIN = 4;
    CLINIC_STAFF = 5;
    CONSUMER = 6;
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  MALE = 1;
  FEMALE = 2;
  OTHER = 3;
}

message Patient {
  string id = 1;
  string name = 2;
  string phone_number = 3;
  string owner_entity_id = 4;
  int32 age = 5;
  Gender gender = 6;
  int32 foot_size = 7;
  int32 total_scans = 8;
  google.protobuf.Timestamp last_scan_date = 9;
  google.protobuf.Timestamp created_at = 10;
}

message GetScansRequest {
    string patient_id = 1;
    string owner_entity_id = 2;
    int32 page = 3;
    int32 page_size = 4;
    string sort_by = 5;
    string sort_order = 6; // "asc" or "desc"
}

message GetScansResponse {
    repeated Scan scans = 1;
    int32 total_count = 2;
}

message GetScanRequest {
    string scan_id = 1;
    string owner_entity_id = 2;
}

message GetScanResponse {
    Scan scan = 1;
}

message CreateScanRequest {
    Scan scan = 1;
}

message CreateScanResponse {
    Scan scan = 1;
}

message UpdateScanRequest {
    Scan scan = 1;
}

message UpdateScanResponse {
    Scan scan = 1;
}

message DeleteScanRequest {
    string scan_id = 1;
    string owner_entity_id = 2;
}

message DeleteScanResponse {
    bool success = 1;
}

message GenerateMediaSignedUrlsRequest {
    string scan_id = 1;
    string owner_entity_id = 2;
}

message GenerateMediaSignedUrlsResponse {
    repeated Image images = 1;
    repeated Video videos = 2;
}

message GetProductRequest {
    string product_id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message GetExerciseRequest {
    string exercise_id = 1;
}

message GetExerciseResponse {
    Exercise exercise = 1;
}

message GetTherapyRequest {
    string therapy_id = 1;
}

message GetTherapyResponse {
    Therapy therapy = 1;
}

// ===== Authentication =====
message RequestOtpRequest {
  string phone_number = 1;
}

message RequestOtpResponse {
  bool success = 1;
  string message = 2;
}

message VerifyOtpRequest {
  string phone_number = 1;
  string otp = 2;
}

message LoginResponse {
  string token = 1;
  string refresh_token = 2;
  repeated Role roles = 3;
  string user_id = 4;
}

// Patient API messages
message GetPatientsRequest {
    string owner_entity_id = 1;
    int32 page = 2;
    int32 page_size = 3;
    string sort_by = 4;
    string sort_order = 5; // "asc" or "desc"
}

message GetPatientsResponse {
    repeated Patient patients = 1;
    int32 total_count = 2;
}

message GetPatientRequest {
    string patient_id = 1;
    string owner_entity_id = 2;
}

message GetPatientResponse {
    Patient patient = 1;
}

message SearchPatientRequest {
    string search_term = 1;
    string owner_entity_id = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message SearchPatientResponse {
    repeated Patient patients = 1;
    int32 total_count = 2;
}

message CreatePatientRequest {
    Patient patient = 1;
}

message CreatePatientResponse {
    Patient patient = 1;
}

message DeletePatientRequest {
    string patient_id = 1;
    string owner_entity_id = 2;
}

message DeletePatientResponse {
    bool success = 1;
}
